Mon Oct 29 18:58:20 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FilterEvaluator.h:
        * dds/DCPS/FilterEvaluator.cpp:

          Attempting to fix MinGW link errors.

        * dds/DCPS/TypeSupportImpl.h:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Moved common code from generated "FooTypeSupportImpl"
          to non-generated TypeSupportImpl.

        * dds/idl/dds_generator.h:
        * dds/idl/metaclass_generator.cpp:

          Fixed Coverity warnings, corrected the code for the new gen_skip_over
          function overloads for IDL unions.

        * dds/DCPS/Serializer.inl:

          Fixed a Coverity warning.

Mon Oct 29 16:21:40 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Added #include needed for some inline=0 builds.

        * dds/DCPS/FilterEvaluator.h:
        * dds/DCPS/FilterEvaluator.cpp:

          Fixed warnings on older GCC versions and compile errors on SunCC.
          The "no virtual destructor" warning is annoying since such a
          destructor is not needed.  Newer GCC seems to have removed this.

Mon Oct 22 01:23:03 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/FilterEvaluator.h:
        * dds/DCPS/FilterEvaluator.cpp:
        * dds/DCPS/Serializer.h:
        * dds/DCPS/Serializer.inl:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          Added support for publisher-side filtering of durable data
          when the subscribing side is using a ContentFilteredTopic.

        * dds/idl/dds_generator.h:
        * dds/idl/marshal_generator.cpp:
        * dds/idl/metaclass_generator.h:
        * dds/idl/metaclass_generator.cpp:

          Code generation support for the above, adding the ability
          to skip to individual fields inside serialized data samples.
