@@ -1,3 +1,14 @@
+Mon Oct 29 19:00:31 UTC 2012  Huang-Ming Huang  <huangh@ociweb.com>
+
+        * dds/DCPS/RecorderImpl.cpp:
+
+          Fixed set_qos() where datareader qos wasn't properly set.
+
+        * dds/DCPS/RawDataSample.cpp:
+        * dds/DCPS/ReplayerImpl.h:
+
+         Fixed issue with uninitialized data members.
+
 Mon Oct 29 18:58:20 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/FilterEvaluator.h:
